# agentlens

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: index.html
examples/: basic_python.py  basic_typescript.ts  multi_step_agent.py  observability_example.py
python/: .coveragerc  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.py
python/agentlens/: __init__.py  __main__.py  metrics.py  observability.py  profiler.py  reporter.py
python/agentlens/integrations/: __init__.py  anthropic.py  openai.py
python/tests/: test_integrations.py  test_observability.py  test_profiler.py  test_reporter.py
typescript/: package.json  tsconfig.json
typescript/src/: index.ts  observability.ts  profiler.ts  reporter.ts
typescript/src/integrations/: anthropic.ts  openai.ts
typescript/tests/: observability.test.ts  profiler.test.ts  reporter.test.ts
