[build-system]
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "agentlens"
version = "0.1.0"
description = "Lightweight observability for AI agent pipelines — DevTools for agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
keywords = [
  "ai",
  "agent",
  "llm",
  "profiler",
  "observability",
  "openai",
  "anthropic",
  "monitoring",
  "tracing",
  "opentelemetry",
  "devtools",
  "debugging",
  "performance",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Software Development :: Debuggers",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: System :: Monitoring",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.20.0"]
all = ["openai>=1.0.0", "anthropic>=0.20.0"]
dev = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0",
  "black",
  "mypy",
  "ruff",
]

[project.urls]
Homepage = "https://speed785.github.io/agentlens"
Documentation = "https://speed785.github.io/agentlens"
Repository = "https://github.com/speed785/agentlens"
Issues = "https://github.com/speed785/agentlens/issues"
Changelog = "https://github.com/speed785/agentlens/blob/main/CHANGELOG.md"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agentlens --cov-config=.coveragerc --cov-report=term-missing --cov-fail-under=100"
asyncio_mode = "auto"

[tool.coverage.run]
omit = ["agentlens/__main__.py", "*/agentlens/__main__.py"]

[tool.ruff]
line-length = 140
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.9"
strict = false
ignore_missing_imports = true
